fix: ajusta cor da tabela para suportar dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -896,7 +896,7 @@ label span {
 }
 
 .tabela-horarios .linha-cinza td {
-  background-color: #e0e0e0;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 @media (min-width: 768px) {
